--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 
   <body>
      <div class="container">
-      <%= render 'layouts/flash_tasks' %>
+      <%= render 'layouts/flash_messages' %>
+      
     <%= yield %>
   </body>
 </html>
