--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
           <li class="dropdown-divider"></li>
           <li class="dropdown-item"><%= link_to 'Logout', logout_path, method: :delete %></li>
         <% else %>
-        <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'Signup', new_user_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
         <% end %>
       </ul>
