--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,13 +1,5 @@
-<%= form_with(model: task, local: true) do |f| %>
-  <% if task.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-        <% task.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with(model: @task, local: true) do |f| %>
+<%= render 'layouts/error_messages', model: f.object %>
   
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
